--- a/code/index.html
+++ b/code/index.html
@@ -1,29 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap"
-    rel="stylesheet" />
-</head>
-<body>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <header class="header">
-        <div class="header-container">
-            <img src="/media/logo.png" alt="header-logo" class="header-logo"></img>
-            <h1 class="header-title">Hacker Escape Rooms</h1>
-        </div>
-        <nav>
-            <a href="Play online" class="header-navbar"></a>
-            <a href="Play on-site" class="header-navbar"></a>
-            <a href="The story" class="header-navbar"></a>
-            <a href="Contact us" class="header-navbar"></a>
-        </nav>
+      <div class="header-container">
+        <img src="/media/logo.png" alt="header-logo" class="header-logo" />
+        <h1 class="header-title">Hacker Escape Rooms</h1>
+      </div>
+      <nav class="header-navbar">
+        <a href="">Play online</a>
+        <a href="">Play on-site</a>
+        <a href="">The story</a>
+        <a href="">Contact us</a>
+      </nav>
     </header>
-    
-</body>
-<script src="main.js"></script>
+    <main>
+      <section class="sec-one">
+        <div class="container-pic"></div>
+      </section>
+      <section class="sec-two">
+        <div class="links-challenges">
+          <button class="btn-on-site" href="">On-site challenges</button>
+          <button class="btn-online" href="">Online challenges</button>
+          <a class="link-online" href="">Online challenges</a>
+        </div>
+      </section>
+      <section class="sec-three">
+        <div class="cont-quotes">
+          <img class="img-head" src="/media/profile.png" alt="" />
+          <div class="cont-quotes-text">
+            <h2 class="quote">
+              This is a quote about how amazing this place is and how much fun
+              me and my friends had when we tried it
+            </h2>
+            <p class="p-quote">John Doe, visited us in September 2021</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="sec-four">
+        <h2 class="title-hori-scroll">Popular challenges right now</h2>
+        <div class="scroll-box">
+          <div class="box">
+            <img class="img-box" src="/media/image 2.jpg" alt="" />
+            <div class="box-bottom">
+              <h2 class="box-title">Title of room (on-site)</h2>
+              <div class="bottom-stars">
+                <img src="/media/Star full.png" alt="" class="star" />
+                <img src="/media/Star full.png" alt="" class="star" />
+                <img src="/media/Star full.png" alt="" class="star" />
+                <img src="/media/Star full.png" alt="" class="star" />
+                <img src="/media/Star empty.png" alt="" class="star" />
+                <p class="bottom-p">2-6 participants</p>
+              </div>
+              <h2 class="bottom-text">
+                Praeterea, ex culpa non invenies unum aut non accusatis unum. Et
+                nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
+              </h2>
+            </div>
+            <button class="box-button">Book this room</button>
+          </div>
+        </div>
+      </section>
+      <section class="sec-five">
+        <div class="links-challenges">
+          <button class="btn-on-site" href="">On-site challenges</button>
+          <button class="btn-online" href="">Online challenges</button>
+          <a class="link-online" href="">Online challenges</a>
+        </div>
+      </section>
+    </main>
+  </body>
+  <script src="main.js"></script>
 </html>
