--- a/code/index.html
+++ b/code/index.html
@@ -71,6 +71,44 @@
             </div>
             <button class="box-button">Book this room</button>
           </div>
+          <div class="box">
+            <img class="img-box" src="/media/image 2.jpg" alt="" />
+            <div class="box-bottom">
+              <h2 class="box-title">Title of room (on-site)</h2>
+              <div class="bottom-stars">
+                <img src="/media/Star full.png" alt="" class="star" />
+                <img src="/media/Star full.png" alt="" class="star" />
+                <img src="/media/Star full.png" alt="" class="star" />
+                <img src="/media/Star full.png" alt="" class="star" />
+                <img src="/media/Star empty.png" alt="" class="star" />
+                <p class="bottom-p">2-6 participants</p>
+              </div>
+              <h2 class="bottom-text">
+                Praeterea, ex culpa non invenies unum aut non accusatis unum. Et
+                nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
+              </h2>
+            </div>
+            <button class="box-button">Book this room</button>
+          </div>
+          <div class="box">
+            <img class="img-box" src="/media/image 2.jpg" alt="" />
+            <div class="box-bottom">
+              <h2 class="box-title">Title of room (on-site)</h2>
+              <div class="bottom-stars">
+                <img src="/media/Star full.png" alt="" class="star" />
+                <img src="/media/Star full.png" alt="" class="star" />
+                <img src="/media/Star full.png" alt="" class="star" />
+                <img src="/media/Star full.png" alt="" class="star" />
+                <img src="/media/Star empty.png" alt="" class="star" />
+                <p class="bottom-p">2-6 participants</p>
+              </div>
+              <h2 class="bottom-text">
+                Praeterea, ex culpa non invenies unum aut non accusatis unum. Et
+                nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
+              </h2>
+            </div>
+            <button class="box-button">Book this room</button>
+          </div>
         </div>
       </section>
       <section class="sec-five">
