--- a/code/index.html
+++ b/code/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Hacker Escape Rooms</title>
     <link rel="stylesheet" href="main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -27,7 +27,9 @@
     </header>
     <main>
       <section class="sec-one">
-        <div class="container-pic"></div>
+        <div class="container-hacker">
+            <img class="img-hacker" src="/media/image 2.jpg" alt="">
+        </div>
       </section>
       <section class="sec-two">
         <div class="links-challenges">
@@ -50,12 +52,12 @@
       </section>
 
       <section class="sec-four">
-        <h2 class="title-hori-scroll">Popular challenges right now</h2>
-        <div class="scroll-box">
-          <div class="box">
-            <img class="img-box" src="/media/image 2.jpg" alt="" />
+        <h2 class="title-scrollbar">Popular challenges right now</h2>
+        <div class="scrollbar">
+          <div class="box-one">
+            <img class="img-box" src="/media/hacker3.png" alt="" />
             <div class="box-bottom">
-              <h2 class="box-title">Title of room (on-site)</h2>
+              <h2 class="title-box">Title of room (on-site)</h2>
               <div class="bottom-stars">
                 <img src="/media/Star full.png" alt="" class="star" />
                 <img src="/media/Star full.png" alt="" class="star" />
@@ -71,10 +73,10 @@
             </div>
             <button class="box-button">Book this room</button>
           </div>
-          <div class="box">
-            <img class="img-box" src="/media/image 2.jpg" alt="" />
+          <div class="box-two">
+            <img class="img-box" src="/media/hacker3.png" alt="" />
             <div class="box-bottom">
-              <h2 class="box-title">Title of room (on-site)</h2>
+              <h2 class="title-box">Title of room (on-site)</h2>
               <div class="bottom-stars">
                 <img src="/media/Star full.png" alt="" class="star" />
                 <img src="/media/Star full.png" alt="" class="star" />
@@ -90,10 +92,10 @@
             </div>
             <button class="box-button">Book this room</button>
           </div>
-          <div class="box">
-            <img class="img-box" src="/media/image 2.jpg" alt="" />
+          <div class="box-three">
+            <img class="img-box" src="/media/hacker3.png" alt="" />
             <div class="box-bottom">
-              <h2 class="box-title">Title of room (on-site)</h2>
+              <h2 class="title-box">Title of room (on-site)</h2>
               <div class="bottom-stars">
                 <img src="/media/Star full.png" alt="" class="star" />
                 <img src="/media/Star full.png" alt="" class="star" />
@@ -118,6 +120,45 @@
           <a class="link-online" href="">Online challenges</a>
         </div>
       </section>
+      <section class="sec-six">
+        <div class="container-story">
+            <p class="text-story">Quodsi haberent magnalia inter 
+                potentiamet divitias, et non illam quidem haec 
+                eo spectant haec 
+                quoque vos omnino desit illud quo solo 
+                felicitatis libertatisque perficiuntur.</p>
+            <button class="button-story">
+                Read the full story</button>
+        </div>
+      </section>
+      <section class="sec-seven">
+        <div class="container-book">
+            <img class="img-twoppl" src="/media/twoppl.png" alt="">
+            <div class="book-onsite">
+                <h2 class="title-book">Play with your friends or 
+                    build your team stronger at work</h2>
+                <p class="p-book">Praeterea, ex culpa non invenies unum aut non 
+                accusatis unum. Et nihil inuitam. Nemo nocere tibi erit,
+                     et non inimicos, et</p>
+                <button class="button-book">Book on-site today</button>
+            </div>
+        </div>
+        <div class="container-challenges">
+            <img class="img-woman" src="/media/
+            kelly-sikkema-YK0HPwWDJ1I-unsplash 1 (1).png" alt="">
+            <div class="challenges">
+                <h2 class="title-chall">Play online or visit our venue 
+                    for one of our 25 escape rooms</h2>
+                <p class="p-chall">Praeterea, ex culpa non invenies unum aut non 
+                accusatis unum. Et nihil inuitam. Nemo nocere tibi erit,
+                     et non inimicos, et</p>
+                <button class="button-book">Book on-site today</button>
+            </div>
+        </div>
+        
+      </section>
+      <section class="sec-eight"></section>
+      <section class="sec-nine"></section>
     </main>
   </body>
   <script src="main.js"></script>
