--- a/code/index.html
+++ b/code/index.html
@@ -11,6 +11,9 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap"
       rel="stylesheet"
     />
+    <link rel = "icon" href =  
+"http://127.0.0.1:5500/code/index.html" 
+        type = "media/logo.png"> 
   </head>
   <body>
     <header class="header">
@@ -28,11 +31,10 @@
     <main>
       <section class="sec-one">
         <div class="container-hacker">
-            <img class="img-hacker" src="/media/image 2.jpg" alt="">
         </div>
       </section>
       <section class="sec-two">
-        <div class="links-challenges">
+        <div class="container-links">
           <button class="btn-on-site" href="">On-site challenges</button>
           <button class="btn-online" href="">Online challenges</button>
           <a class="link-online" href="">Online challenges</a>
@@ -114,7 +116,7 @@
         </div>
       </section>
       <section class="sec-five">
-        <div class="links-challenges">
+        <div class="container-links">
           <button class="btn-on-site" href="">On-site challenges</button>
           <button class="btn-online" href="">Online challenges</button>
           <a class="link-online" href="">Online challenges</a>
@@ -122,43 +124,74 @@
       </section>
       <section class="sec-six">
         <div class="container-story">
-            <p class="text-story">Quodsi haberent magnalia inter 
-                potentiamet divitias, et non illam quidem haec 
-                eo spectant haec 
-                quoque vos omnino desit illud quo solo 
-                felicitatis libertatisque perficiuntur.</p>
-            <button class="button-story">
-                Read the full story</button>
+          <p class="text-story">
+            Quodsi haberent magnalia inter potentiamet divitias, et non illam
+            quidem haec eo spectant haec quoque vos omnino desit illud quo solo
+            felicitatis libertatisque perficiuntur.
+          </p>
+          <button class="button-story">Read the full story</button>
         </div>
       </section>
       <section class="sec-seven">
         <div class="container-book">
-            <img class="img-twoppl" src="/media/twoppl.png" alt="">
-            <div class="book-onsite">
-                <h2 class="title-book">Play with your friends or 
-                    build your team stronger at work</h2>
-                <p class="p-book">Praeterea, ex culpa non invenies unum aut non 
-                accusatis unum. Et nihil inuitam. Nemo nocere tibi erit,
-                     et non inimicos, et</p>
-                <button class="button-book">Book on-site today</button>
-            </div>
+          <img class="img-twoppl" src="/media/twoppl.png" alt="" />
+          <div class="book-onsite">
+            <h2 class="title-book">
+              Play with your friends or build your team stronger at work
+            </h2>
+            <p class="p-book">
+              Praeterea, ex culpa non invenies unum aut non accusatis unum. Et
+              nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
+            </p>
+            <button class="button-book">Book on-site today</button>
+          </div>
         </div>
         <div class="container-challenges">
-            <img class="img-woman" src="/media/
-            kelly-sikkema-YK0HPwWDJ1I-unsplash 1 (1).png" alt="">
-            <div class="challenges">
-                <h2 class="title-chall">Play online or visit our venue 
-                    for one of our 25 escape rooms</h2>
-                <p class="p-chall">Praeterea, ex culpa non invenies unum aut non 
-                accusatis unum. Et nihil inuitam. Nemo nocere tibi erit,
-                     et non inimicos, et</p>
-                <button class="button-book">Book on-site today</button>
-            </div>
+          <img
+            class="img-woman"
+            src="/media/kelly-sikkema-YK0HPwWDJ1I-unsplash 1 (1).png"
+            alt=""
+          />
+          <div class="challenges">
+            <h2 class="title-chall">
+              Play online or visit our venue for one of our 25 escape rooms
+            </h2>
+            <p class="p-chall">
+              Praeterea, ex culpa non invenies unum aut non accusatis unum. Et
+              nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
+            </p>
+            <button class="button-chall">See all challenges</button>
+          </div>
         </div>
-        
       </section>
-      <section class="sec-eight"></section>
-      <section class="sec-nine"></section>
+      <footer class="footer">
+        <div class="container-footer">
+          <div class="footer-title-box">
+            <h2 class="footer-title">[Esc] Hacker Escape Rooms</h2>
+            <p class="footer-title-p">
+              Quodsi haberent magnalia inter potentiam et divitias, et non illam
+              quidem haec eo spectant haec quoque vos omnino desit illud quo
+              solo felicitatis libertatisque perficiuntur.
+            </p>
+          </div>
+          <div class="footer-site-map">
+            <h2 class="footer-link-title">Site map</h2>
+            <a class="footer-links" href="">The story</a>
+            <a class="footer-links" href="">Contact us</a>
+            <a class="footer-links" href="">Legal</a>
+          </div>
+          <div class="footer-play">
+            <a class="footer-links" href="">Play online</a>
+            <a class="footer-links" href="">Play on-site</a>
+          </div>
+          <div class="footer-follow-us">
+            <h2 class="footer-link-title">Follow us on</h2>
+            <a class="footer-links" href="">Facebook</a>
+            <a class="footer-links" href="">Instagram</a>
+            <a class="footer-links" href="">Twitter</a>
+          </div>
+        </div>
+      </footer>
     </main>
   </body>
   <script src="main.js"></script>
