--- a/code/index.html
+++ b/code/index.html
@@ -9,11 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap"
-      rel="stylesheet"
-    />
-    <link rel = "icon" href =  
-"http://127.0.0.1:5500/code/index.html" 
-        type = "media/logo.png"> 
+      rel="stylesheet"/>
   </head>
   <body>
     <header class="header">
@@ -29,31 +25,41 @@
       </nav>
     </header>
     <main>
-      <section class="sec-one">
-        <div class="container-hacker">
-        </div>
+      <section class="sec-hero">
+        <div class="container-hacker"></div>
       </section>
-      <section class="sec-two">
-        <div class="container-links">
-          <button class="btn-on-site" href="">On-site challenges</button>
+      <section class="sec-buttons">
+        <div class="container-buttons">
           <button class="btn-online" href="">Online challenges</button>
+          <button class="btn-on-site" href="">On-site challenges</button>
           <a class="link-online" href="">Online challenges</a>
         </div>
       </section>
-      <section class="sec-three">
+      <section class="sec-quotes">
         <div class="cont-quotes">
-          <img class="img-head" src="/media/profile.png" alt="" />
-          <div class="cont-quotes-text">
-            <h2 class="quote">
-              This is a quote about how amazing this place is and how much fun
-              me and my friends had when we tried it
-            </h2>
-            <p class="p-quote">John Doe, visited us in September 2021</p>
+          <div class="quote-one">
+            <img class="img-head" src="/media/profile.png" alt="" />
+            <div class="cont-quotes-text">
+              <h2 class="quote-text">
+                This is a quote about how amazing this place is and how much fun
+                me and my friends had when we tried it
+              </h2>
+              <p class="quote-name">John Doe, visited us in September 2021</p>
+            </div>
+          </div>
+          <div class="quote-two">
+            <img class="img-head" src="/media/profile.png" alt="" />
+            <div class="cont-quotes-text">
+              <h2 class="quote-text">
+                This is a quote about how amazing this place is and how much fun
+                me and my friends had when we tried it
+              </h2>
+              <p class="quote-name">John Doe, visited us in September 2021</p>
+            </div>
           </div>
         </div>
       </section>
-
-      <section class="sec-four">
+      <section class="sec-scrollbar">
         <h2 class="title-scrollbar">Popular challenges right now</h2>
         <div class="scrollbar">
           <div class="box-one">
@@ -115,14 +121,14 @@
           </div>
         </div>
       </section>
-      <section class="sec-five">
-        <div class="container-links">
-          <button class="btn-on-site" href="">On-site challenges</button>
+      <section class="sec-buttons">
+        <div class="container-buttons-two">
           <button class="btn-online" href="">Online challenges</button>
+          <button class="btn-on-site" href="">On-site challenges</button>
           <a class="link-online" href="">Online challenges</a>
         </div>
       </section>
-      <section class="sec-six">
+      <section class="sec-story">
         <div class="container-story">
           <p class="text-story">
             Quodsi haberent magnalia inter potentiamet divitias, et non illam
@@ -132,55 +138,44 @@
           <button class="button-story">Read the full story</button>
         </div>
       </section>
-      <section class="sec-seven">
-        <div class="container-book">
-          <img class="img-twoppl" src="/media/twoppl.png" alt="" />
-          <div class="book-onsite">
-            <h2 class="title-book">
-              Play with your friends or build your team stronger at work
-            </h2>
-            <p class="p-book">
-              Praeterea, ex culpa non invenies unum aut non accusatis unum. Et
-              nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
-            </p>
-            <button class="button-book">Book on-site today</button>
+      <section class="sec-play">
+          <div class="play-container-one">
+              <img class="img-play-one" src="/media/twoppl.png" alt="">
+              <div class="content-play-one">
+                <h2 class="play-title">Play with your friends or build your team stronger at work</h2>
+                <p class="play-p">Praeterea, ex culpa non invenies unum aut non accusatis unum.
+                   Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et</p>
+                <button class="button-book">Book on-site today</button>
+              </div>
           </div>
-        </div>
-        <div class="container-challenges">
-          <img
-            class="img-woman"
-            src="/media/kelly-sikkema-YK0HPwWDJ1I-unsplash 1 (1).png"
-            alt=""
-          />
-          <div class="challenges">
-            <h2 class="title-chall">
-              Play online or visit our venue for one of our 25 escape rooms
-            </h2>
-            <p class="p-chall">
-              Praeterea, ex culpa non invenies unum aut non accusatis unum. Et
-              nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
-            </p>
-            <button class="button-chall">See all challenges</button>
+          <div class="play-container-two">
+            <img class="img-play-two" src="/media/woman.png" alt="">
+            <div class="content-play-two">
+              <h2 class="play-title">Play online or visit our venue for one of our 25 escape rooms</h2>
+              <p class="play-p">Praeterea, ex culpa non invenies unum aut non accusatis unum. 
+                Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et</p>
+              <button class="button-see">See all challenges</button>
+            </div>
           </div>
-        </div>
       </section>
-      <footer class="footer">
-        <div class="container-footer">
-          <div class="footer-title-box">
-            <h2 class="footer-title">[Esc] Hacker Escape Rooms</h2>
-            <p class="footer-title-p">
-              Quodsi haberent magnalia inter potentiam et divitias, et non illam
-              quidem haec eo spectant haec quoque vos omnino desit illud quo
-              solo felicitatis libertatisque perficiuntur.
-            </p>
-          </div>
+    </main>
+
+    <footer class="footer">
+      <div class="container-footer">
+        <div class="footer-title-box">
+          <h2 class="footer-title">[Esc] Hacker Escape Rooms</h2>
+          <p class="footer-title-p">
+            Quodsi haberent magnalia inter potentiam et divitias, et non illam
+            quidem haec eo spectant haec quoque vos omnino desit illud quo
+            solo felicitatis libertatisque perficiuntur.
+          </p>
+        </div>
+        <div class="footer-link-box">
           <div class="footer-site-map">
             <h2 class="footer-link-title">Site map</h2>
             <a class="footer-links" href="">The story</a>
             <a class="footer-links" href="">Contact us</a>
-            <a class="footer-links" href="">Legal</a>
-          </div>
-          <div class="footer-play">
+            <a class="link-break" href="">Legal</a>
             <a class="footer-links" href="">Play online</a>
             <a class="footer-links" href="">Play on-site</a>
           </div>
@@ -191,8 +186,8 @@
             <a class="footer-links" href="">Twitter</a>
           </div>
         </div>
-      </footer>
-    </main>
+      </div>
+    </footer>
   </body>
   <script src="main.js"></script>
 </html>
