--- a/code/index.html
+++ b/code/index.html
@@ -3,13 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hacker Escape Rooms</title>
+    <title>[ESC] Escape Rooms</title>
     <link rel="stylesheet" href="main.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap"
-      rel="stylesheet"/>
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
   </head>
   <body>
     <header class="header">
@@ -24,6 +20,7 @@
         <a href="">Contact us</a>
       </nav>
     </header>
+
     <main>
       <section class="sec-hero">
         <div class="container-hacker"></div>
