--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header class="header">
       <div class="header-container">
-        <img src="/media/logo.png" alt="header-logo" class="header-logo" />
+        <img src="media/logo.png" alt="header-logo" class="header-logo" />
         <h1 class="header-title">Hacker Escape Rooms</h1>
       </div>
       <nav class="header-navbar">
@@ -35,7 +35,7 @@
       <section class="sec-quotes">
         <div class="cont-quotes">
           <div class="quote-one">
-            <img class="img-head" src="/media/profile.png" alt="" />
+            <img class="img-head" src="media/profile.png" alt="" />
             <div class="cont-quotes-text">
               <h2 class="quote-text">
                 This is a quote about how amazing this place is and how much fun
@@ -45,7 +45,7 @@
             </div>
           </div>
           <div class="quote-two">
-            <img class="img-head" src="/media/profile.png" alt="" />
+            <img class="img-head" src="media/profile.png" alt="" />
             <div class="cont-quotes-text">
               <h2 class="quote-text">
                 This is a quote about how amazing this place is and how much fun
@@ -60,15 +60,15 @@
         <h2 class="title-scrollbar">Popular challenges right now</h2>
         <div class="scrollbar">
           <div class="box-one">
-            <img class="img-box" src="/media/hacker3.png" alt="" />
+            <img class="img-box" src="media/hacker3.png" alt="" />
             <div class="box-bottom">
               <h2 class="title-box">Title of room (on-site)</h2>
               <div class="bottom-stars">
-                <img src="/media/Star full.png" alt="" class="star" />
-                <img src="/media/Star full.png" alt="" class="star" />
-                <img src="/media/Star full.png" alt="" class="star" />
-                <img src="/media/Star full.png" alt="" class="star" />
-                <img src="/media/Star empty.png" alt="" class="star" />
+                <img src="media/Star full.png" alt="" class="star" />
+                <img src="media/Star full.png" alt="" class="star" />
+                <img src="media/Star full.png" alt="" class="star" />
+                <img src="media/Star full.png" alt="" class="star" />
+                <img src="media/Star empty.png" alt="" class="star" />
                 <p class="bottom-p">2-6 participants</p>
               </div>
               <h2 class="bottom-text">
@@ -79,15 +79,15 @@
             <button class="box-button">Book this room</button>
           </div>
           <div class="box-two">
-            <img class="img-box" src="/media/hacker3.png" alt="" />
+            <img class="img-box" src="media/hacker3.png" alt="" />
             <div class="box-bottom">
               <h2 class="title-box">Title of room (on-site)</h2>
               <div class="bottom-stars">
-                <img src="/media/Star full.png" alt="" class="star" />
-                <img src="/media/Star full.png" alt="" class="star" />
-                <img src="/media/Star full.png" alt="" class="star" />
-                <img src="/media/Star full.png" alt="" class="star" />
-                <img src="/media/Star empty.png" alt="" class="star" />
+                <img src="media/Star full.png" alt="" class="star" />
+                <img src="media/Star full.png" alt="" class="star" />
+                <img src="media/Star full.png" alt="" class="star" />
+                <img src="media/Star full.png" alt="" class="star" />
+                <img src="media/Star empty.png" alt="" class="star" />
                 <p class="bottom-p">2-6 participants</p>
               </div>
               <h2 class="bottom-text">
@@ -102,11 +102,11 @@
             <div class="box-bottom">
               <h2 class="title-box">Title of room (on-site)</h2>
               <div class="bottom-stars">
-                <img src="/media/Star full.png" alt="" class="star" />
-                <img src="/media/Star full.png" alt="" class="star" />
-                <img src="/media/Star full.png" alt="" class="star" />
-                <img src="/media/Star full.png" alt="" class="star" />
-                <img src="/media/Star empty.png" alt="" class="star" />
+                <img src="media/Star full.png" alt="" class="star" />
+                <img src="media/Star full.png" alt="" class="star" />
+                <img src="media/Star full.png" alt="" class="star" />
+                <img src="media/Star full.png" alt="" class="star" />
+                <img src="media/Star empty.png" alt="" class="star" />
                 <p class="bottom-p">2-6 participants</p>
               </div>
               <h2 class="bottom-text">
@@ -137,7 +137,7 @@
       </section>
       <section class="sec-play">
           <div class="play-container-one">
-              <img class="img-play-one" src="/media/twoppl.png" alt="">
+              <img class="img-play-one" src="media/twoppl.png" alt="">
               <div class="content-play-one">
                 <h2 class="play-title">Play with your friends or build your team stronger at work</h2>
                 <p class="play-p">Praeterea, ex culpa non invenies unum aut non accusatis unum.
@@ -146,7 +146,7 @@
               </div>
           </div>
           <div class="play-container-two">
-            <img class="img-play-two" src="/media/woman.png" alt="">
+            <img class="img-play-two" src="media/woman.png" alt="">
             <div class="content-play-two">
               <h2 class="play-title">Play online or visit our venue for one of our 25 escape rooms</h2>
               <p class="play-p">Praeterea, ex culpa non invenies unum aut non accusatis unum. 
