klar med layout

--- a/index.html
+++ b/index.html
@@ -136,24 +136,27 @@
         </div>
       </section>
       <section class="sec-play">
+        <div class="container-play">
           <div class="play-container-one">
-              <img class="img-play-one" src="media/twoppl.png" alt="">
-              <div class="content-play-one">
-                <h2 class="play-title">Play with your friends or build your team stronger at work</h2>
-                <p class="play-p">Praeterea, ex culpa non invenies unum aut non accusatis unum.
-                   Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et</p>
-                <button class="button-book">Book on-site today</button>
-              </div>
-          </div>
-          <div class="play-container-two">
-            <img class="img-play-two" src="media/woman.png" alt="">
-            <div class="content-play-two">
-              <h2 class="play-title">Play online or visit our venue for one of our 25 escape rooms</h2>
-              <p class="play-p">Praeterea, ex culpa non invenies unum aut non accusatis unum. 
-                Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et</p>
-              <button class="button-see">See all challenges</button>
+            <img class="img-play-one" src="media/twoppl.png" alt="">
+            <div class="content-play-one">
+              <h2 class="play-title">Play with your friends or build your team stronger at work</h2>
+              <p class="play-p">Praeterea, ex culpa non invenies unum aut non accusatis unum.
+                 Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et</p>
+              <button class="button-book">Book on-site today</button>
             </div>
+        </div>
+        <div class="play-container-two">
+          <img class="img-play-two" src="media/woman.png" alt="">
+          <div class="content-play-two">
+            <h2 class="play-title">Play online or visit our venue for one of our 25 escape rooms</h2>
+            <p class="play-p">Praeterea, ex culpa non invenies unum aut non accusatis unum. 
+              Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et</p>
+            <button class="button-see">See all challenges</button>
           </div>
+        </div>
+        </div>
+          
       </section>
     </main>
 
