--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <button class="box-button">Book this room</button>
           </div>
           <div class="box-three">
-            <img class="img-box" src="/media/hacker3.png" alt="" />
+            <img class="img-box" src="media/hacker3.png" alt="" />
             <div class="box-bottom">
               <h2 class="title-box">Title of room (on-site)</h2>
               <div class="bottom-stars">
