--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>[ESC] Escape Rooms</title>
     <link rel="stylesheet" href="main.css" />
-    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+    <link href="https://fonts.cdnfonts.com/css/roboto" rel="stylesheet">
   </head>
   <body>
     <header class="header">
@@ -59,8 +59,8 @@
       <section class="sec-scrollbar">
         <h2 class="title-scrollbar">Popular challenges right now</h2>
         <div class="scrollbar">
-          <div class="box-one">
-            <img class="img-box" src="media/hacker3.png" alt="" />
+          <div class="card card-first">
+            <img class="img-card" src="media/hacker3.png" alt="" />
             <div class="box-bottom">
               <h2 class="title-box">Title of room (on-site)</h2>
               <div class="bottom-stars">
@@ -78,8 +78,8 @@
             </div>
             <button class="box-button">Book this room</button>
           </div>
-          <div class="box-two">
-            <img class="img-box" src="media/hacker3.png" alt="" />
+          <div class="card">
+            <img class="img-card" src="media/hacker3.png" alt="" />
             <div class="box-bottom">
               <h2 class="title-box">Title of room (on-site)</h2>
               <div class="bottom-stars">
@@ -97,8 +97,8 @@
             </div>
             <button class="box-button">Book this room</button>
           </div>
-          <div class="box-three">
-            <img class="img-box" src="media/hacker3.png" alt="" />
+          <div class="card">
+            <img class="img-card" src="media/hacker3.png" alt="" />
             <div class="box-bottom">
               <h2 class="title-box">Title of room (on-site)</h2>
               <div class="bottom-stars">
@@ -128,7 +128,7 @@
       <section class="sec-story">
         <div class="container-story">
           <p class="text-story">
-            Quodsi haberent magnalia inter potentiamet divitias, et non illam
+            Quodsi haberent magnalia inter potentiam et divitias, et non illam
             quidem haec eo spectant haec quoque vos omnino desit illud quo solo
             felicitatis libertatisque perficiuntur.
           </p>
