--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       </section>
       <section class="sec-buttons">
         <div class="container-buttons">
-          <button class="btn-online" href="">Online challenges</button>
-          <button class="btn-on-site" href="">On-site challenges</button>
+          <button class="button-online" href="">Online challenges</button>
+          <button class="button-on-site" href="">On-site challenges</button>
           <a class="link-online" href="">Online challenges</a>
         </div>
       </section>
@@ -61,8 +61,8 @@
         <div class="scrollbar">
           <div class="card card-first">
             <img class="img-card" src="media/hacker3.png" alt="" />
-            <div class="box-bottom">
-              <h2 class="title-box">Title of room (on-site)</h2>
+            <div class="card-bottom">
+              <h2 class="card-title">Title of room (on-site)</h2>
               <div class="bottom-stars">
                 <img src="media/Star full.png" alt="" class="star" />
                 <img src="media/Star full.png" alt="" class="star" />
@@ -80,8 +80,8 @@
           </div>
           <div class="card">
             <img class="img-card" src="media/hacker3.png" alt="" />
-            <div class="box-bottom">
-              <h2 class="title-box">Title of room (on-site)</h2>
+            <div class="card-bottom">
+              <h2 class="card-title">Title of room (on-site)</h2>
               <div class="bottom-stars">
                 <img src="media/Star full.png" alt="" class="star" />
                 <img src="media/Star full.png" alt="" class="star" />
@@ -99,8 +99,8 @@
           </div>
           <div class="card">
             <img class="img-card" src="media/hacker3.png" alt="" />
-            <div class="box-bottom">
-              <h2 class="title-box">Title of room (on-site)</h2>
+            <div class="card-bottom">
+              <h2 class="card-title">Title of room (on-site)</h2>
               <div class="bottom-stars">
                 <img src="media/Star full.png" alt="" class="star" />
                 <img src="media/Star full.png" alt="" class="star" />
@@ -120,8 +120,8 @@
       </section>
       <section class="sec-buttons">
         <div class="container-buttons-two">
-          <button class="btn-online" href="">Online challenges</button>
-          <button class="btn-on-site" href="">On-site challenges</button>
+          <button class="button-online" href="">Online challenges</button>
+          <button class="button-on-site" href="">On-site challenges</button>
           <a class="link-online" href="">Online challenges</a>
         </div>
       </section>
@@ -162,7 +162,7 @@
 
     <footer class="footer">
       <div class="container-footer">
-        <div class="footer-title-box">
+        <div class="footer-card-title">
           <h2 class="footer-title">[Esc] Hacker Escape Rooms</h2>
           <p class="footer-title-p">
             Quodsi haberent magnalia inter potentiam et divitias, et non illam
