--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <main>
       <section class="sec-hero">
-        <div class="container-hacker"></div>
+        <div class="hero"></div>
       </section>
       <section class="sec-buttons">
         <div class="container-buttons">
