--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
               </h2>
             </div>
-            <button class="box-button">Book this room</button>
+            <button class="card-button">Book this room</button>
           </div>
           <div class="card">
             <img class="img-card" src="media/hacker3.png" alt="" />
@@ -95,7 +95,7 @@
                 nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
               </h2>
             </div>
-            <button class="box-button">Book this room</button>
+            <button class="card-button">Book this room</button>
           </div>
           <div class="card">
             <img class="img-card" src="media/hacker3.png" alt="" />
@@ -114,7 +114,7 @@
                 nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
               </h2>
             </div>
-            <button class="box-button">Book this room</button>
+            <button class="card-button">Book this room</button>
           </div>
         </div>
       </section>
