--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>[ESC] Escape Rooms</title>
     <link rel="stylesheet" href="main.css" />
-    <link href="https://fonts.cdnfonts.com/css/roboto" rel="stylesheet">
+    <link href="https://fonts.cdnfonts.com/css/roboto" rel="stylesheet" />
   </head>
   <body>
     <header class="header">
@@ -138,25 +138,32 @@
       <section class="sec-play">
         <div class="container-play">
           <div class="play-container-one">
-            <img class="img-play-one" src="media/twoppl.png" alt="">
+            <img class="img-play-one" src="media/twoppl.png" alt="" />
             <div class="content-play-one">
-              <h2 class="play-title">Play with your friends or build your team stronger at work</h2>
-              <p class="play-p">Praeterea, ex culpa non invenies unum aut non accusatis unum.
-                 Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et</p>
+              <h2 class="play-title">
+                Play with your friends or build your team stronger at work
+              </h2>
+              <p class="play-p">
+                Praeterea, ex culpa non invenies unum aut non accusatis unum. Et
+                nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
+              </p>
               <button class="button-book">Book on-site today</button>
             </div>
-        </div>
-        <div class="play-container-two">
-          <img class="img-play-two" src="media/woman.png" alt="">
-          <div class="content-play-two">
-            <h2 class="play-title">Play online or visit our venue for one of our 25 escape rooms</h2>
-            <p class="play-p">Praeterea, ex culpa non invenies unum aut non accusatis unum. 
-              Et nihil inuitam. Nemo nocere tibi erit, et non inimicos, et</p>
-            <button class="button-see">See all challenges</button>
+          </div>
+          <div class="play-container-two">
+            <img class="img-play-two" src="media/woman.png" alt="" />
+            <div class="content-play-two">
+              <h2 class="play-title">
+                Play online or visit our venue for one of our 25 escape rooms
+              </h2>
+              <p class="play-p">
+                Praeterea, ex culpa non invenies unum aut non accusatis unum. Et
+                nihil inuitam. Nemo nocere tibi erit, et non inimicos, et
+              </p>
+              <button class="button-see">See all challenges</button>
+            </div>
           </div>
         </div>
-        </div>
-          
       </section>
     </main>
 
@@ -166,8 +173,8 @@
           <h2 class="footer-title">[Esc] Hacker Escape Rooms</h2>
           <p class="footer-title-p">
             Quodsi haberent magnalia inter potentiam et divitias, et non illam
-            quidem haec eo spectant haec quoque vos omnino desit illud quo
-            solo felicitatis libertatisque perficiuntur.
+            quidem haec eo spectant haec quoque vos omnino desit illud quo solo
+            felicitatis libertatisque perficiuntur.
           </p>
         </div>
         <div class="footer-link-box">
