--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>[ESC] Escape Rooms</title>
+    <link rel="icon" type="media/logo.png" href="simonpizevski.github.io/Escape_Rooms/">
     <link rel="stylesheet" href="main.css" />
     <link href="https://fonts.cdnfonts.com/css/roboto" rel="stylesheet" />
   </head>
   <body>
+
     <header class="header">
       <div class="header-container">
         <img src="media/logo.png" alt="header-logo" class="header-logo" />
@@ -195,6 +197,7 @@
         </div>
       </div>
     </footer>
+
   </body>
   <script src="main.js"></script>
 </html>
