--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>[ESC] Escape Rooms</title>
-    <link rel="icon" type="media/logo.png" href="simonpizevski.github.io/Escape_Rooms/">
+    <link rel="icon" type="image/png" href="/media/logo.png">
     <link rel="stylesheet" href="main.css" />
     <link href="https://fonts.cdnfonts.com/css/roboto" rel="stylesheet" />
   </head>
